--- a/real-time-stock/rts.css
+++ b/real-time-stock/rts.css
@@ -43,7 +43,7 @@
   @media (max-width: 767.98px) {
     .stockLevelDiv {
       max-width: 50%;
-      margin-left: 20px;
+      margin-left: 1.25rem;
     }
 
     .stockLevel {
@@ -59,6 +59,6 @@
     @media (max-width: 576px) {
     .stockLevelDiv {
       max-width: 100%;
-      margin-left: 25px;
+      margin-left: 1.563rem;
     }
   }
