--- a/real-time-stock/rts.css
+++ b/real-time-stock/rts.css
@@ -1,6 +1,6 @@
 .stockLevel {
   font-size: 0.625rem;
-  font-weight: 700;  
+  font-weight: 700;
 }
 
 .findMoreAvailabilityUrl {
@@ -9,37 +9,48 @@
   font-weight: 700;
 }
 
-.PrintProductListUngroup .product-table-col {
-  padding: 1em 1em;
+main#scannerGetBarcode2Ungroup .table-desktop {
+  font-size: inherit;
 }
 
-#print-table.product-table-col {
-  font-size: 0.8rem;
+.table-desktop > tbody > .product-row > .ellipsis {
+  white-space: inherit;
 }
 
 .SubCategoriesRow .rowMode .product-list .product .shopping .fa-star {
   margin: -0.25rem;
 }
 
-.invisible {
-  display: none;
-}
-
 main#booker_orderT .colMode .product-list .product .shop .shopping .fa-star {
   position: initial;
+}
+
+.invisible {
+  display: none;
 }
 
 .list-img, .note-img {
   display: none;
 }
 
+
 .SubCategoriesRow .rowMode .product-list .product .shopping .add-note, .modalComponents .delist-modal .rowMode .product-list .product .shopping .add-note {
   padding-right: 0!important;
+}
+
+.PrintProductListUngroup .product-table-col {
+  padding: 1em 1em;
 }
 
 .rtsIcons > div {
   justify-content: center;
   margin-bottom: .5rem;
+}
+
+
+
+#print-table.product-table-col {
+  font-size: 0.8rem;
 }
 
 .add-note {
@@ -50,15 +61,14 @@ main#booker_orderT .colMode .product-list .product .shop .shopping .fa-star {
   font-size: inherit;
 }
 
+
+
 @media (max-width: 767px) {
   .stockLevelDiv {
     max-width: 50%;
     float: right;
   }
 
-  .stockLevel {
-    margin-left: 0.5rem;
-  }
 
   .SubCategoriesRow .rowMode .product-list .product .shopping .add-note {
     align-items: center !important;
@@ -72,13 +82,13 @@ main#booker_orderT .colMode .product-list .product .shop .shopping .fa-star {
     margin-left: 1.25rem;
   }
 
-  .mobileAddNoteStock {
-    column-gap: 1rem;;
-  }
-
   .SubCategoriesRow .rowMode .product-list .product .shopping .add-note {
     align-items: center !important;
     padding-right: 0;
+  }
+
+  .mobileAddNoteStock {
+    column-gap: 1rem;;
   }
 }
 
