--- a/searchimprovements/documentsearch/documentsearch.css
+++ b/searchimprovements/documentsearch/documentsearch.css
@@ -52,6 +52,8 @@ header .suggestions-result {
   
   .searchDropdown {
 	  display:block;
+	  margin-left: auto;
+	  margin-right: auto;
 	  height:100%; 
 	  border:0px; 
 	  padding-right:0.5em; 
