--- a/shop-by-brand/multiple-images/multipleimages.css
+++ b/shop-by-brand/multiple-images/multipleimages.css
@@ -1,9 +1,10 @@
 
     #multipleImagesPanel {
+        max-width: 80%;
         display: flex;
-        flex-direction: row;
         justify-content: center;
     }
+
 
     .mz-thumb.mz-thumb-selected img {
         border-bottom-color: transparent;
@@ -20,7 +21,7 @@
   
     a[data-zoom-id] img, .mz-thumb img {
         border: 4px solid #f1f1f1;
-        max-width: 75px;
+        max-width: 50px;
     }
 
     .mz-thumb.mz-thumb-selected img {
@@ -84,6 +85,10 @@
     }
 
     @media (max-width: 768px) {
+
+        #multipleImagesPanel {
+            max-width: 100%;
+        }
         
         .mz-thumb img {
             background: #f1f1f1; 
