--- a/searchimprovements/documentsearch/documentsearch.css
+++ b/searchimprovements/documentsearch/documentsearch.css
@@ -9,6 +9,11 @@ header .suggestions-result div a {
   text-align: left;
 }
 
+header .suggestions-result div a:hover {
+	background: transparent;
+	color: #2356AA;
+}
+
 .keywordsuggestion .price, .keywordsuggestion .rrp {
   margin: 0;
   font-weight: 900;
@@ -21,7 +26,7 @@ header .suggestions-result div a {
   margin: 0;
 }
 
-.searchDropdownParent select:focus {
+.searchDropdownParent select, .searchDropdownParent select:focus {
 	width: 140px;
 }
 
@@ -33,7 +38,9 @@ header .suggestions-result {
   left: 140px;
   width: calc(100% - 11.5em);
 	border: 0;
-	box-shadow: none;
+	height: 500px;
+	overflow: auto;
+
 }
 
 .suggestion-keywords {
@@ -49,8 +56,7 @@ header .suggestions-result {
 	  border:2px solid #2356AA; 
 	  border-top-left-radius: 5px !important;
 	  border-bottom-left-radius: 5px !important;
-	  border-right:0; 
-	  width: 140px;
+	  border-right:0;
 	  display:inline-block; 
 	  font-weight:bold; 
 	  color:#fff;
