--- a/searchimprovements/documentsearch/documentsearch.css
+++ b/searchimprovements/documentsearch/documentsearch.css
@@ -1,5 +1,17 @@
+
 .keywordsuggestion {
-  border: 1px solid #2356AA;
+	width: 100%;
+	position: relative;
+	padding: 20px;
+}
+
+.keywordsuggestion::after {
+	content: '';
+	position: absolute;
+	height: 2px;
+	background: #ccc;
+	top: 100%;
+	width: 95%;
 }
 
 header .suggestions-result div a {
@@ -35,12 +47,15 @@ header .suggestions-result div a:hover {
 }
 
 header .suggestions-result {
-  left: 140px;
+  left: 143px;
   width: calc(100% - 11.5em);
-	border: 0;
+	border: 1px solid #2356AA;
 	height: 500px;
 	overflow: auto;
-
+	box-shadow: none;
+	border-bottom-left-radius: 0;
+	border-bottom-right-radius: 0;
+	padding-bottom: 10px;
 }
 
 .suggestion-keywords {
@@ -141,4 +156,3 @@ header .suggestions-result {
 		}
 
   }
-	
