--- a/searchimprovements/documentsearch/documentsearch.css
+++ b/searchimprovements/documentsearch/documentsearch.css
@@ -1,4 +1,3 @@
-
 .keywordsuggestion {
 	width: 100%;
 	position: relative;
@@ -98,6 +97,20 @@ header .suggestions-result {
 	border-bottom-left-radius: 0 !important;
   }
 
+	@media (min-width: 2550px) {
+		
+		.keywordsuggestion {
+			padding: 40px;
+		}
+
+		.col-sm-2, .col-xl-2 {
+			flex: 0 0 8.333333%;
+			max-width: 8.333333%;
+			display: flex;
+			justify-content: flex-start;
+		}
+	}
+
 
   @media (max-width: 1200px) {
     .keywordsuggestion .price, .keywordsuggestion .rrp {
@@ -156,3 +169,4 @@ header .suggestions-result {
 		}
 
   }
+	
