--- a/searchimprovements/documentsearch/documentsearch.css
+++ b/searchimprovements/documentsearch/documentsearch.css
@@ -49,7 +49,7 @@ header .suggestions-result {
   left: 143px;
   width: calc(100% - 11.5em);
 	border: 1px solid #2356AA;
-	height: 500px;
+	max-height: 500px;
 	overflow: auto;
 	box-shadow: none;
 	border-bottom-left-radius: 0;
@@ -65,29 +65,14 @@ header .suggestions-result {
   .suggestion-keywords::placeholder {
 	color: #9b9ec4 !important;
   }
-  
-  .searchDropdownParent {
-	  border:2px solid #2356AA; 
-	  border-top-left-radius: 5px !important;
-	  border-bottom-left-radius: 5px !important;
-	  border-right:0;
-	  display:inline-block; 
-	  font-weight:bold; 
-	  color:#fff;
-	  background-color: #2356AA;
-  }
+
   
   .searchDropdown {
-	  display:block;
-		margin-left: auto;
-		margin-right: auto;
-	  height:100%; 
-	  border:0px; 
-	  padding-right:0.5em; 
-	  font-weight: 500 !important; 
-	  color:#fff;
-	  background-color: #2356AA;
+	  height: 100%; 
 		text-align: center;
+	  border-top-left-radius: 5px !important;
+	  border-bottom-left-radius: 5px !important;
+	  color:#fff;
   }
 
 
@@ -168,4 +153,3 @@ header .suggestions-result {
 		}
 
   }
-	
