--- a/searchimprovements/documentspage/documentspage.css
+++ b/searchimprovements/documentspage/documentspage.css
@@ -117,3 +117,15 @@
     font-size: 11px;
   }
 }
+
+@media (min-width: 1440px) {
+.document-list .documentList .category {
+   min-width: 10%;
+  }
+}
+
+@media (min-width: 2560px) {
+  .document-list .documentList .category {
+     min-width: 6.333333%;
+    }
+  }
