--- a/searchimprovements/documentspage/documentspage.css
+++ b/searchimprovements/documentspage/documentspage.css
@@ -9,6 +9,13 @@
   justify-content: center;
 }
 
+.subcategories,
+.departments, 
+.filter-by,
+.result {
+  display: none;
+}
+
 .document-list .rowMode .documentList {
   align-items: center;
 }
@@ -31,7 +38,8 @@
 .document-list .categoryPublished {
   display: flex;
   flex-direction: column;
-  font-size: 11px;
+  row-gap: 8px;
+  font-size: 12px;
 }
 
 .document-list .gridMode .documentList .category, .document-list .rowMode .documentList .category {
@@ -76,9 +84,8 @@
 .document-list .documentList .category {
   background: #2356AA;
   display: inline-block;
-  min-width: 13%;
   border-radius: 5px;
-  padding: 0px 10px;
+  padding: 0px 7px;
   color: #ffffff;
   margin-right: 10px;
 }
@@ -123,11 +130,6 @@
   }
 }
 
-@media (min-width: 1440px) {
-.document-list .documentList .category {
-   min-width: 10%;
-  }
-}
 
 @media (min-width: 2560px) {
   .document-list .documentList .category {
