--- a/searchimprovements/documentspage/documentspage.css
+++ b/searchimprovements/documentspage/documentspage.css
@@ -116,8 +116,9 @@
   .document-list .documentList .category {
     margin-right: 0;
     display: block;
-    width: 50%;
+    width: max-content;
     margin: 0 auto;
+    margin-bottom: 5px;
   }
 
 
@@ -129,10 +130,3 @@
     font-size: 11px;
   }
 }
-
-
-@media (min-width: 2560px) {
-  .document-list .documentList .category {
-     min-width: 6.333333%;
-    }
-  }
