--- a/digitalvouchers/style.css
+++ b/digitalvouchers/style.css
@@ -81,7 +81,7 @@ digital-voucher .card .card-title p {
 digital-voucher .card .card-bottom,
 digital-voucher .card .card-text,
 digital-voucher .card .card-title .promotion {
-  padding: 20px;
+  padding: 5px 20px;
 }
 
 digital-voucher .card .card-title .promotion {
